<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_margin="5dp"
        android:padding="5dp"/>


    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleEditText"
        android:text="@string/location_not_set"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/setLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:text="@string/set_location"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:padding="5dp"/>


    <Button
        android:id="@+id/addCoverPhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setLocationButton"
        android:text="@string/add_cover_photo"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:padding="5dp"/>
</RelativeLayout>