<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/friendImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/my_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friendNameTextView"
        android:layout_toRightOf="@+id/friendImageView"
        android:layout_toEndOf="@+id/friendImageView"
        android:layout_margin="5dp" />

    <Button
        android:text="@string/accept"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#008000"
        android:textColor="#FFF"
        android:id="@+id/acceptButton"
        android:layout_below="@+id/friendNameTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
         />

    <Button
        android:text="@string/reject"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#ff0000"
        android:textColor="#FFF"
        android:id="@+id/declineButton"
        android:layout_below="@+id/friendNameTextView"
        android:layout_toLeftOf="@+id/acceptButton"
        android:layout_toStartOf="@+id/acceptButton" />

</RelativeLayout>