<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemContainer">

    <ImageView
        android:id="@+id/tripImageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="@string/trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/friendNameTextView"
        android:layout_toRightOf="@+id/tripImageView"
        android:layout_toEndOf="@+id/tripImageView"
        android:layout_margin="5dp"
        android:layout_alignTop="@+id/joinTripButton" />

    <TextView
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationTextView"
        android:layout_toRightOf="@+id/tripImageView"
        android:layout_toEndOf="@+id/tripImageView"
        android:layout_toStartOf="@+id/joinTripButton"
        android:layout_toLeftOf="@+id/joinTripButton"
        android:layout_below="@+id/friendNameTextView"
        android:layout_margin="5dp" />

    <Button
        android:text="@string/join_trip"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:id="@+id/joinTripButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>