<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/relativeLayout">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:paddingBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textMessage"
        android:id="@+id/textMessage"
        android:layout_below="@+id/full"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageMessage"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full"
        android:id="@+id/full"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/time"
        android:textStyle="bold"
        android:layout_below="@+id/delete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>



    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/delete"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/delete" />

    </RelativeLayout>


</LinearLayout>