<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikhil.group22_hw09.MainActivity">

    <TextView
        android:id="@+id/myFriendsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_friends"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <!--<LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/myFriendsTextView">

        <Button
            android:id="@+id/tripsIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_drive_eta_black_18dp"/>

        <Button
            android:id="@+id/addTripsIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_add_box_black_18dp"/>

        <Button
            android:id="@+id/friendRequestIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_person_black_18dp"/>
        <Button
            android:id="@+id/logoutIcon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_power_settings_new_black_18dp"/>
    </LinearLayout>-->

    <TextView
        android:id="@+id/noFriendsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/you_don_t_have_any_friends_yet"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <android.support.v7.widget.RecyclerView

        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:visibility="invisible"
        android:layout_below="@+id/myFriendsTextView"
        android:layout_above="@+id/addFriendsButton">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/addFriendsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_friends"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:textAllCaps="false"/>

</RelativeLayout>
